--- a/app/src/main/res/layout-v16/activity_main.xml
+++ b/app/src/main/res/layout-v16/activity_main.xml
@@ -1,71 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout
+
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/servicera"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/white">
 
-    <ImageView
-        android:id="@+id/logo"
-        android:layout_width="328dp"
-        android:layout_height="422dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="41dp"
-        android:layout_marginLeft="41dp"
-        android:layout_marginTop="164dp"
-        android:layout_marginEnd="42dp"
-        android:layout_marginRight="42dp"
-        android:layout_marginBottom="145dp"
-        android:contentDescription="logo"
-        app:srcCompat="@drawable/logofremove" />
-
-    <TextView
-        android:id="@+id/splashscreen"
-        android:layout_width="198dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="107dp"
-        android:layout_marginLeft="107dp"
-        android:layout_marginTop="669dp"
-        android:layout_marginEnd="107dp"
-        android:layout_marginRight="106dp"
-        android:layout_marginBottom="25dp"
-        android:fontFamily="@font/raleway_extrabold"
-        android:gravity="center"
-        android:text="SERVICERA"
-        android:textColor="#555555"
-        android:textSize="14sp" />
-
-    <TextView
-        android:id="@+id/splashscreen12"
-        android:layout_width="match_parent"
-        android:layout_height="23dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="107dp"
-        android:layout_marginLeft="107dp"
-        android:layout_marginTop="693dp"
-        android:layout_marginEnd="107dp"
-        android:layout_marginRight="107dp"
-        android:layout_marginBottom="19dp"
-        android:fontFamily="@font/raleway_bold"
-        android:gravity="center"
-        android:text="2020 - COPYRIGHT"
-        android:textSize="12sp" />
-
+    <pl.droidsonroids.gif.GifImageView
+        android:layout_width="160dp"
+        android:layout_height="160dp"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:layout_gravity="center"
+        android:src="@drawable/giflogowhite"
+        />
 </RelativeLayout>
