--- a/app/src/main/res/layout/listview_layout2.xml
+++ b/app/src/main/res/layout/listview_layout2.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/white"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,17 +9,19 @@
     >
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/icon"
+        android:background="@color/white"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:contentDescription="@string/hello"
         android:paddingTop="10dp"
-        android:paddingRight="10dp"
+        android:paddingEnd="10dp"
         android:paddingBottom="10dp"
-        app:civ_border_color="@color/white"
+        app:civ_border_color="#555555"
         app:civ_border_width="1dp"
         />
 
     <LinearLayout
+        android:background="@color/white"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
@@ -27,27 +30,28 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/raleway_extrabold"
-            android:textColor="#000000"
-            android:textSize="17dp"
+            android:textColor="@color/black"
+            android:textSize="17sp"
             />
 
         <TextView
             android:id="@+id/phone"
-            android:layout_width="220dp"
+            android:layout_width="230dp"
             android:layout_height="80dp"
             android:fontFamily="@font/raleway_bold"
             android:textSize="12dp"
+            android:textColor="@color/black"
             />
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/call_icon"
             android:layout_width="45dp"
             android:layout_height="45dp"
-            android:layout_marginLeft="220dp"
+            android:layout_marginStart="220dp"
             android:layout_marginTop="-78dp"
-            android:layout_marginRight="10dp"
+            android:layout_marginEnd="10dp"
             android:contentDescription="@string/hello"
             android:paddingTop="10dp"
-            android:paddingRight="10dp"
+            android:paddingEnd="10dp"
             android:paddingBottom="10dp"
             android:src="@drawable/phone"
             app:civ_border_color="@color/white"
